Fix issue with reflow from scrollbar

--- a/backend/sass/common.blocks/_modal.scss
+++ b/backend/sass/common.blocks/_modal.scss
@@ -31,8 +31,6 @@
 
 body[data-modal-open='true'] {
   overflow-y: hidden;
-  position: static;
-  height: auto;
 }
 
 .modal__dialog {
